--- a/Makefile.am
+++ b/Makefile.am
@@ -41,7 +41,7 @@ noinst_HEADERS = \
 	src/x86/x86enc.h \
 	src/x86/x86int.h
 
-src_dct_SOURCES = src/dct.c
+src_dct_SOURCES = src/dct.c src/tf.c src/internal.c
 if ENABLE_X86ASM
 src_dct_SOURCES += src/x86/cpu.c
 if ENABLE_SSE2_INTRINSICS
@@ -69,7 +69,6 @@ src_libdaalabase_la_SOURCES = \
 	src/generic_code.c \
 	src/generic_decoder.c \
 	src/info.c \
-	src/internal.c \
 	src/intra.c \
 	src/intradata.c \
 	src/laplace_decoder.c \
@@ -82,10 +81,10 @@ src_libdaalabase_la_SOURCES = \
 	src/pvq_decoder.c \
 	src/state.c \
 	src/switch_table.c \
-	src/tf.c \
 	src/zigzag4.c \
 	src/zigzag8.c \
 	src/zigzag16.c \
+	src/zigzag32.c \
 	$(src_dct_SOURCES)
 if ENABLE_X86ASM
 src_libdaalabase_la_SOURCES += \
@@ -269,7 +268,6 @@ tools_block_size_analysis_SOURCES = \
 	tools/vidinput.c \
 	tools/y4m_input.c \
 	$(src_dct_SOURCES) \
-	src/internal.c \
 	src/generic_encoder.c \
 	src/generic_code.c \
 	src/laplace_encoder.c \
@@ -333,8 +331,6 @@ tools_intra_stats_SOURCES = \
 	$(src_dct_SOURCES) \
 	src/intra.c \
 	src/switch_table.c \
-	src/tf.c \
-	src/internal.c \
 	src/intradata.c
 tools_intra_stats_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS) $(OPENMP_CFLAGS)
 tools_intra_stats_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
@@ -367,9 +363,7 @@ tools_intra_pred_SOURCES = \
 	$(src_dct_SOURCES) \
 	src/intra.c \
 	src/intradata.c \
-	src/internal.c \
-	src/switch_table.c \
-	src/tf.c
+	src/switch_table.c
 tools_intra_pred_CFLAGS = $(OGG_CFLAGS) $(PNG_CFLAGS) $(OPENMP_CFLAGS)
 tools_intra_pred_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
 
@@ -400,8 +394,6 @@ tools_intra_trace_SOURCES = \
 	$(src_dct_SOURCES) \
 	src/intra.c \
 	src/switch_table.c \
-	src/tf.c \
-	src/internal.c \
 	src/intradata.c
 tools_intra_trace_CFLAGS = $(OGG_CFLAGS) $(PNG_CFLAGS) $(OPENMP_CFLAGS)
 tools_intra_trace_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
@@ -409,7 +401,6 @@ tools_intra_trace_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
 # trans
 tools_trans_SOURCES = \
 	tools/trans.c \
-	src/internal.c \
 	tools/intra_fit_tools.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
@@ -434,7 +425,6 @@ tools_trans_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
 # trans_gain
 tools_trans_gain_SOURCES = \
 	tools/trans_gain.c \
-	src/internal.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
 	tools/od_filter.c \
@@ -448,7 +438,6 @@ tools_trans_gain_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
 #trans2d
 tools_trans2d_SOURCES = \
 	tools/trans2d.c \
-	src/internal.c \
 	tools/intra_fit_tools.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
@@ -481,8 +470,6 @@ tools_init_intra_xform_SOURCES = \
 	src/filter.c \
 	$(src_dct_SOURCES) \
 	src/intra.c \
-	src/tf.c \
-	src/internal.c \
 	src/intradata.c
 tools_init_intra_xform_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS)
 tools_init_intra_xform_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
@@ -539,6 +526,7 @@ endif # ENABLE_TOOLS
 if ENABLE_UNIT_TESTS
 noinst_PROGRAMS += \
 	src/tests/dcttest \
+	src/tests/test_32x32 \
 	src/tests/ectest \
 	src/tests/test_coef_coder \
 	src/tests/logging_test \
@@ -548,6 +536,7 @@ noinst_PROGRAMS += \
 
 TESTS = \
 	src/tests/dcttest \
+	src/tests/test_32x32 \
 	src/tests/ectest \
 	src/tests/test_coef_coder \
 	src/tests/logging_test \
@@ -555,10 +544,14 @@ TESTS = \
 	src/tests/test_filters \
 	src/tests/check_tests
 
-src_tests_dcttest_SOURCES = $(src_dct_SOURCES) src/filter.c src/internal.c
+src_tests_dcttest_SOURCES = $(src_dct_SOURCES) src/filter.c
 src_tests_dcttest_CFLAGS = $(OGG_CFLAGS) \
  -DOD_DCT_CHECK_OVERFLOW -DOD_DCT_TEST -DOD_ENABLE_ASSERTIONS
 src_tests_dcttest_LDADD = $(LIBM)
+
+src_tests_test_32x32_SOURCES = src/tests/test_32x32.c
+src_tests_test_32x32_CFLAGS = $(OGG_CFLAGS) -D_GNU_SOURCE
+src_tests_test_32x32_LDADD = $(LIBM)
 
 src_tests_ectest_SOURCES = src/tests/ectest.c
 src_tests_ectest_CFLAGS = $(OGG_CFLAGS)
