Add checking for ARM assembly

--- a/configure.ac
+++ b/configure.ac
@@ -186,6 +186,10 @@ case $host_cpu in
   x86_64)
     cpu_x86=true
     ;;
+  arm)
+  armhf)
+    cpu_arm=true
+    ;;
 esac
 
 TMP_CFLAGS="$CFLAGS"
@@ -238,6 +242,11 @@ AM_CONDITIONAL([ENABLE_SSE41_INTRINSICS],
  [test "$enable_asm" = "yes" -a "$cpu_x86" = "true" -a "$enable_sse41_intrinsics" = "yes"])
 AM_CONDITIONAL([ENABLE_AVX2_INTRINSICS],
  [test "$enable_asm" = "yes" -a "$cpu_x86" = "true" -a "$enable_avx2_intrinsics" = "yes"])
+ 
+AS_IF([test "$enable_asm" = "yes" -a "$cpu_arm" = "true"], [
+  AC_DEFINE([OD_ARMASM], [1], [Enable ARM asm optimisations])
+  AC_DEFINE([OD_ARM_MAY_HAVE_NEON], [1], [Enable ARM NEON optimisations])
+])
 
 AC_ARG_ENABLE([encoder-check],
   AS_HELP_STRING([--enable-encoder-check], [Compare reconstructed frames]),,
