--- a/unix/Makefile
+++ b/unix/Makefile
@@ -62,6 +62,7 @@ CFLAGS := -DOD_ENABLE_ASSERTIONS $(CFLAGS)
 #CFLAGS := -DOD_CHECKASM $(CFLAGS)
 #CFLAGS := -DOD_DUMP_IMAGES $(CFLAGS)
 #CFLAGS := -DOD_ENCODER_CHECK $(CFLAGS)
+#CFLAGS := -DOD_DCT_CHECK_OVERFLOW $(CFLAGS)
 #CFLAGS := -DOD_ANIMATE $(CFLAGS)
 #CFLAGS := -DOD_LOGGING_ENABLED $(CFLAGS)
 CFLAGS := -DOD_ACCOUNTING $(CFLAGS)
