configure: add OD_CFLAGS for user CFLAGS
These will be appended to CFLAGS
Usage: OD_CFLAGS=-DRAINBOW_VOMIT ./configure

Fixes #20.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -56,7 +56,7 @@ CINCLUDE = `sdl-config --cflags` `pkg-config ogg --cflags`
 # You may get speed increases by including flags such as -O2 or -O3 or
 #  -ffast-math, or additional flags, depending on your system and compiler.
 # The -g flag will generally include debugging information.
-CFLAGS := -g $(CFLAGS)
+CFLAGS := -g $(CFLAGS) $(OD_CFLAGS)
 CFLAGS := -DOD_LOGGING_ENABLED $(CFLAGS)
 CFLAGS := -DOD_ENABLE_ASSERTIONS $(CFLAGS)
 #CFLAGS := -DOD_CHECKASM $(CFLAGS)
