--- a/configure.ac
+++ b/configure.ac
@@ -43,7 +43,8 @@ AC_SUBST(OD_LT_CURRENT)
 AC_SUBST(OD_LT_REVISION)
 AC_SUBST(OD_LT_AGE)
 
-CFLAGS="-std=c89 -pedantic -Wall -Wextra -Wno-parentheses -Wno-long-long -Wno-overlength-strings $CFLAGS"
+CFLAGS="-std=c89 -pedantic -Wall -Wextra -Wno-parentheses -Wno-long-long \
+        -Wno-overlength-strings $CFLAGS $OD_CFLAGS"
 
 # Platform-specific tweaks
 case $host in
