--- a/unix/Makefile
+++ b/unix/Makefile
@@ -42,7 +42,6 @@ TEST_COEF_CODER_TARGET = test_coef_coder
 TEST_HEADER_TARGET = check_tests
 TEST_LOGGING_TARGET = logging_test
 TEST_DIVU_SMALL_TARGET = test_divu_small
-TEST_FILTERS_TARGET = test_filters
 
 # The command to use to generate dependency information
 MAKEDEPEND = $(CC) -MM
@@ -225,7 +224,6 @@ TEST_CHECK_INITIAL_CSOURCES = tests/check_initial.c
 TEST_HEADER_CSOURCES=tests/check_main.c tests/headerencode_test.c
 TEST_LOGGING_CSOURCES=tests/logging_test.c
 TEST_DIVU_SMALL_CSOURCES=tests/test_divu_small.c
-TEST_FILTERS_CSOURCES=tests/test_filters.c
 
 # Create object file list.
 LIBDAALABASE_OBJS:= ${LIBDAALABASE_CSOURCES:%.c=${WORKDIR}/%.o}
@@ -246,12 +244,10 @@ TEST_COEF_CODER_OBJS:= ${TEST_COEF_CODER_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_HEADER_OBJS:= ${TEST_HEADER_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_LOGGING_OBJS:= ${TEST_LOGGING_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_DIVU_SMALL_OBJS:= ${TEST_DIVU_SMALL_CSOURCES:%.c=${WORKDIR}/%.o}
-TEST_FILTERS_OBJS:= ${TEST_FILTERS_CSOURCES:%.c=${WORKDIR}/%.o}
 ALL_OBJS:= ${LIBDAALABASE_OBJS} ${LIBDAALADEC_OBJS} ${LIBDAALAENC_OBJS} \
  ${DUMP_VIDEO_OBJS} ${ENCODER_EXAMPLE_OBJS} ${PLAYER_EXAMPLE_OBJS} \
  ${ECTEST_OBJS} ${TEST_CHECK_INITIAL_OBJS} ${TEST_COEF_CODER_OBJS} \
- ${TEST_HEADER_OBJS} ${TEST_LOGGING_OBJS} ${TEST_DIVU_SMALL_OBJS} \
- ${TEST_FILTERS_OBJS}
+ ${TEST_HEADER_OBJS} ${TEST_LOGGING_OBJS} ${TEST_DIVU_SMALL_OBJS}
 # Create the dependency file list
 ALL_DEPS:= ${ALL_OBJS:%.o=%.d}
 # Prepend source path to file names.
@@ -287,14 +283,13 @@ TEST_COEF_CODER_TARGET:= ${TESTBINDIR}/${TEST_COEF_CODER_TARGET}
 TEST_HEADER_TARGET:= ${TESTBINDIR}/${TEST_HEADER_TARGET}
 TEST_LOGGING_TARGET:= ${TESTBINDIR}/${TEST_LOGGING_TARGET}
 TEST_DIVU_SMALL_TARGET:=${TESTBINDIR}/${TEST_DIVU_SMALL_TARGET}
-TEST_FILTERS_TARGET:=${TESTBINDIR}/${TEST_FILTERS_TARGET}
 
 # Complete set of targets
 ALL_TARGETS:= ${LIBDAALABASE_TARGET} ${LIBDAALADEC_TARGET} \
  ${LIBDAALAENC_TARGET} ${DUMP_VIDEO_TARGET} ${ENCODER_EXAMPLE_TARGET} \
  ${PLAYER_EXAMPLE_TARGET} ${DCTTEST_TARGET} ${ECTEST_TARGET} \
  ${TEST_COEF_CODER_TARGET} ${TEST_HEADER_TARGET} ${TEST_LOGGING_TARGET} \
- ${TEST_CHECK_INITIAL_TARGET} ${TEST_DIVU_SMALL_TARGET} ${TEST_FILTERS_TARGET}
+ ${TEST_CHECK_INITIAL_TARGET} ${TEST_DIVU_SMALL_TARGET}
 
 # Targets:
 # Everything (default)
@@ -378,12 +373,6 @@ ${TEST_DIVU_SMALL_TARGET}: ${TEST_DIVU_SMALL_OBJS} ${LIBDAALABASE_TARGET}
 	${CC} ${CFLAGS} ${TEST_DIVU_SMALL_OBJS} ${TEST_DIVU_SMALL_LIBS} -o $@ \
 	  ${LIBDAALABASE_TARGET} -lm
 
-# test_filters
-${TEST_FILTERS_TARGET}: ${TEST_FILTERS_OBJS} ${LIBDAALABASE_TARGET}
-	mkdir -p ${TESTBINDIR}
-	${CC} ${CFLAGS} ${TEST_FILTERS_OBJS} ${TEST_FILTERS_LIBS} -o $@ \
-	  ${LIBDAALABASE_TARGET} -lm
-
 # Assembly listing
 ALL_ASM := ${ALL_OBJS:%.o=%.s}
 asm: ${ALL_ASM}
@@ -397,7 +386,6 @@ check: all
 	${TEST_HEADER_TARGET}
 	${TEST_LOGGING_TARGET}
 	${TEST_DIVU_SMALL_TARGET}
-	${TEST_FILTERS_TARGET}
 
 # Remove all targets.
 clean:
