--- a/tools/unix/Makefile
+++ b/tools/unix/Makefile
@@ -348,20 +348,39 @@ JY_CSOURCES:=${JY_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%} \
  ${JY_LIB_CSOURCES:%=${LIBSRCDIR}/%}
 JY_TARGET:=jpegyuv
 
+#draw_zigzags
+DZZ_LOCAL_CSOURCES = \
+draw_zigzags.c
+
+DZZ_LIB_CSOURCES = \
+zigzag4.c \
+zigzag8.c \
+zigzag16.c \
+zigzag32.c \
+zigzag64.c
+
+DZZ_LDFLAGS =
+
+DZZ_OBJS:=${DZZ_LOCAL_CSOURCES} ${DZZ_LIB_CSOURCES}
+DZZ_OBJS:=${DZZ_OBJS:%.c=${WORKDIR}/%.o}
+DZZ_CSOURCES:=${DZZ_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%} \
+ ${DZZ_LIB_CSOURCES:%=${LIBSRCDIR}/%}
+DZZ_TARGET:=draw_zigzags
+
 ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PSNR_OBJS} ${PSNRHVS_OBJS} \
  ${GEN_CDF_OBJS} ${GEN_LAPLACE_TABLES_OBJS} ${T_OBJS} \
  ${TG_OBJS} ${CBASIS_OBJS} ${T2D_OBJS} ${BSIZE_OBJS} ${BD_OBJS} \
- ${YJ_OBJS} ${JY_OBJS} ${MONO_OBJS} ${DS_OBJS} ${US_OBJS}
+ ${YJ_OBJS} ${JY_OBJS} ${DZZ_OBJS} ${MONO_OBJS} ${DS_OBJS} ${US_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
 ALL_DEPS:=${ALL_OBJS:%.o=%.d}
 
 ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} ${PSNR_TARGET} ${PSNRHVS_TARGET} \
- ${GEN_CDF_TARGET} \
- ${GEN_LAPLACE_TABLES_TARGET} \
- ${T_TARGET} ${TG_TARGET} ${CBASIS_TARGET} ${T2D_TARGET} ${BSIZE_TARGET} ${BD_TARGET} \
- ${YJ_TARGET} ${JY_TARGET} ${MONO_TARGET} ${DS_TARGET} ${US_TARGET}
+ ${GEN_CDF_TARGET} ${GEN_LAPLACE_TABLES_TARGET} ${T_TARGET} \
+ ${TG_TARGET} ${CBASIS_TARGET} ${T2D_TARGET} ${BSIZE_TARGET} ${BD_TARGET} \
+ ${YJ_TARGET} ${JY_TARGET} ${DZZ_TARGET} ${MONO_TARGET} ${DS_TARGET} \
+ ${US_TARGET}
 
 all: ${ALL_TARGETS}
 
@@ -415,6 +434,9 @@ ${YJ_TARGET}: ${YJ_OBJS}
 
 ${JY_TARGET}: ${JY_OBJS}
 	${CC} ${CFLAGS} ${JY_OBJS} ${JY_LDFLAGS} -o $@
+
+${DZZ_TARGET}: ${DZZ_OBJS}
+	${CC} ${CFLAGS} ${DZZ_OBJS} ${DZZ_LDFLAGS} -o $@
 
 ${MONO_TARGET}: ${MONO_OBJS}
 	${CC} ${CFLAGS} ${MONO_OBJS} ${MONO_LDFLAGS} -o $@
